se agrego el servicio getAll y se cargo la lista de usuarios

--- a/actividad/src/app/app.component.html
+++ b/actividad/src/app/app.component.html
@@ -1,1 +1,10 @@
+<header class="bg-dark p-3 mb-2">
+  <app-navbar></app-navbar>
+</header>
+<main>
+  <div>
+    <app-user-list [listausuarios]="arruser"></app-user-list>
+  </div>
+</main>
+
 <router-outlet />
