se agregaron rutas  y correcciones de las mismas

--- a/actividad/src/app/pages/user-list/user-list.component.html
+++ b/actividad/src/app/pages/user-list/user-list.component.html
@@ -1,9 +1,11 @@
-<section class="container">
-  <div class="row row-gap-sm-1">
-    @for (user of listausuarios; track user.id) {
-    <article class="col-pro">
-      <app-userview [myuser]="user" />
-    </article>
-    }
-  </div>
-</section>
+<main>
+  <section class="container">
+    <div class="row row-gap-sm-1">
+      @for (user of arruser; track user.id) {
+      <article class="col-pro">
+        <app-userview [myuser]="user" />
+      </article>
+      }
+    </div>
+  </section>
+</main>
