--- a/actividad/src/app/components/navbar/navbar.component.html
+++ b/actividad/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,38 @@
-<p>navbar works!</p>
+<nav
+  class="navbar navbar-expand-lg bg-dark navbar-dark p-3 border-4 border-bottom border-danger shadow"
+>
+  <div class="container-fluid">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            RouterLinkActive="active"
+            [routerLink]="['/control-panel', 'home']"
+            >Lista de usuarios</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            RouterLinkActive="active"
+            [routerLink]="['/control-panel', 'new']"
+            >Nuevo Empleado</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
