se agregaron las card usuarios y responsive de las mismas

--- a/actividad/src/app/pages/user-list/user-list.component.html
+++ b/actividad/src/app/pages/user-list/user-list.component.html
@@ -1,8 +1,8 @@
 <main>
   <section class="container">
-    <div class="row row-gap-sm-1">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-gap-1">
       @for (user of arruser; track user.id) {
-      <article class="col-pro">
+      <article class="col">
         <app-userview [myuser]="user" />
       </article>
       }
