se agregaron estilos a las card y los touteroulet correspondientes en los botones

--- a/actividad/src/app/components/navbar/navbar.component.html
+++ b/actividad/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-lg bg-dark navbar-dark p-3 border-4 border-bottom border-danger shadow"
+  class="navbar navbar-expand-lg bg-dark navbar-dark p-3 border-4 border-bottom border-danger shadow mb-2"
 >
   <div class="container-fluid">
     <button
