--- a/actividad/src/app/pages/userview/userview.component.html
+++ b/actividad/src/app/pages/userview/userview.component.html
@@ -9,9 +9,13 @@
 
     <div class="d-flex flex-wrap gap-1">
       <div class="flex-fill">
-        <a [routerLink]="['user', myuser.id]" class="btn btn-warning"
-          >Ver detalles</a
+        <a
+          [routerLink]="['/control-panel', 'usuario', myuser._id]"
+          class="btn btn-secondary border-0 d-flex flex-column w-100"
         >
+          <li class="fa-duotone fa-solid fa-magnifying-glass"></li>
+          <small class="fs-18">Ver detalles</small>
+        </a>
         <!-- <a
             class="btn btn-secondary d-flex flex-column w-100 border-0"
             [routerLink]="['user', myuser.id]"
@@ -22,13 +26,19 @@
           </a> -->
       </div>
       <div class="flex-fill">
-        <a class="btn btn-secondary border-0 d-flex flex-column w-100">
+        <a
+          class="btn btn-info border-0 d-flex flex-column w-100"
+          [routerLink]="['/control-panel', 'actualizar-usuario', myuser._id]"
+        >
           <li class="fa-solid fa-arrows-rotate"></li>
           <small class="fs-18">Actualizar</small>
         </a>
       </div>
       <div class="flex-fill">
-        <a class="btn btn-secondary border-0 d-flex flex-column w-100">
+        <a
+          class="btn btn-danger border-0 d-flex flex-column w-100"
+          [routerLink]="['/control-panel', 'home']"
+        >
           <li class="fa-solid fa-trash-can"></li>
           <small class="fs-18">Borrar</small>
         </a>
