--- a/actividad/src/app/pages/userview/userview.component.html
+++ b/actividad/src/app/pages/userview/userview.component.html
@@ -1,4 +1,5 @@
 <section class="container h-100">
+  <!-- 
   <div class="card shadow h-100 justify-content-between p-2">
     <div class="text-center flex-wrap w-100">
       <div class="d-flex">
@@ -16,7 +17,7 @@
           <li class="fa-duotone fa-solid fa-magnifying-glass"></li>
           <small class="fs-18">Ver detalles</small>
         </a>
-        <!-- <a
+        <a
             class="btn btn-secondary d-flex flex-column w-100 border-0"
             [routerLink]="['user', myuser.id]"
             class="btn btn-warning"
@@ -24,7 +25,7 @@
             <li class="fa-duotone fa-solid fa-magnifying-glass"></li>
             Ver detalles
           </a> -->
-      </div>
+  <!--  </div>
       <div class="flex-fill">
         <a
           class="btn btn-info border-0 d-flex flex-column w-100"
@@ -43,6 +44,6 @@
           <small class="fs-18">Borrar</small>
         </a>
       </div>
-    </div>
-  </div>
+    </div> -->
+  <!-- </div>  -->
 </section>
