se obtuvieron los datos del usuarop por id en el componente card-user

--- a/actividad/src/app/pages/user-list/user-list.component.html
+++ b/actividad/src/app/pages/user-list/user-list.component.html
@@ -15,7 +15,7 @@
         <div class="d-flex flex-wrap gap-1">
           <div class="flex-fill">
             <a
-              [routerLink]="['/control-panel', 'usuario', user._id]"
+              [routerLink]="['/control-panel', 'users', user._id]"
               class="btn btn-secondary border-0 d-flex flex-column w-100"
             >
               <li class="fa-duotone fa-solid fa-magnifying-glass"></li>
