--- a/actividad/src/app/pages/card-user/card-user.component.html
+++ b/actividad/src/app/pages/card-user/card-user.component.html
@@ -1,9 +1,6 @@
-<!-- <section class="container">
+<section class="container">
   <div class="card p-3 d-flex">
     <h3>{{ usuario?.first_name }}</h3>
     <h3>{{ usuario?.last_name }}</h3>
-    <p>{{ usuario?.username }}</p>
-    <p>{{ usuario?.email }}</p>
   </div>
 </section>
- -->
