--- a/actividad/src/app/pages/card-user/card-user.component.html
+++ b/actividad/src/app/pages/card-user/card-user.component.html
@@ -1,6 +1,67 @@
-<section class="container">
-  <div class="card p-3 d-flex">
-    <h3>{{ usuario?.first_name }}</h3>
-    <h3>{{ usuario?.last_name }}</h3>
+<section class="container d-flex justify-content-center">
+  <div class="card mb-3 p-5" style="width: 80%">
+    <div class="row no-gutters">
+      <div class="col-md-4 p-4 align-content-center">
+        <img
+          [src]="usuario?.image"
+          class="card-img img-fluid rounded-circle"
+          alt="..."
+        />
+      </div>
+
+      <div
+        class="border-start border-2 border-secondary-subtle pe-5 ps-5 col-md-8 align-content-around col-custom"
+      >
+        <div class="card-body ms-0 ps-0">
+          <h4>{{ usuario?.first_name }}</h4>
+          <h4>{{ usuario?.last_name }}</h4>
+          <p><strong>Nombre de Usuario: </strong>{{ usuario?.username }}</p>
+
+          <p><strong>Email: </strong>{{ usuario?.email }}</p>
+        </div>
+
+        <div class="d-flex flex-wrap gap-1">
+          <div class="flex-fill">
+            <a
+              [routerLink]="['/control-panel', 'home']"
+              class="btn btn-secondary border-0 d-flex flex-column w-100"
+            >
+              <i class="fa-solid fa-rotate-left"></i>
+              <small class="fs-18">Volver a listado</small>
+            </a>
+            <!-- <a
+                  class="btn btn-secondary d-flex flex-column w-100 border-0"
+                  [routerLink]="['user', myuser.id]"
+                  class="btn btn-warning"
+                >
+                  <li class="fa-duotone fa-solid fa-magnifying-glass"></li>
+                  Ver detalles
+                </a> -->
+          </div>
+          <div class="flex-fill">
+            <a
+              class="btn btn-info border-0 d-flex flex-column w-100"
+              [routerLink]="[
+                '/control-panel',
+                'actualizar-usuario',
+                usuario?._id
+              ]"
+            >
+              <li class="fa-solid fa-arrows-rotate"></li>
+              <small class="fs-18">Actualizar</small>
+            </a>
+          </div>
+          <div class="flex-fill">
+            <a
+              class="btn btn-danger border-0 d-flex flex-column w-100"
+              [routerLink]="['/control-panel', 'home']"
+            >
+              <li class="fa-solid fa-trash-can"></li>
+              <small class="fs-18">Borrar</small>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
