se comento el style rn user-list y se cambio el icono del boton de actualizar

--- a/actividad/src/app/pages/form/form.component.html
+++ b/actividad/src/app/pages/form/form.component.html
@@ -72,7 +72,7 @@
         }
       </div>
       <button type="submit" class="btn btn-info border-0 align-items-center">
-        <i class="fa-solid fa-arrows-rotate"></i>
+        <i class="fa-duotone fa-solid fa-floppy-disk"></i>
         <small class="fs-18"> Actualizar</small>
       </button>
     </form>
