--- a/actividad/src/app/pages/user-list/user-list.component.css
+++ b/actividad/src/app/pages/user-list/user-list.component.css
@@ -1,3 +1,19 @@
-.gap{
-    gap:2px;
+/* @media(min-width: 400px){
+    .col-pro{
+        display: flex;
+        height:auto;
+    }
 }
+@media(min-width: 600px){
+    .col-pro{
+        display: flex;
+       
+        max-width: 33.3%;
+    }
+}
+@media(min-width: 1000px){
+    .col-pro{
+        display: flex;
+        max-width: 25%;
+    }
+} */
