se agrego el insert y update dinamico al formulario ademas se hicieron las validaciones correspondientes

--- a/actividad/src/app/components/navbar/navbar.component.html
+++ b/actividad/src/app/components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
             class="nav-link"
             RouterLinkActive="active"
             [routerLink]="['/control-panel', 'new']"
-            >Nuevo Empleado</a
+            >Nuevo Usuario</a
           >
         </li>
       </ul>
