se agrego el delete a la card-user-

--- a/actividad/src/app/pages/card-user/card-user.component.html
+++ b/actividad/src/app/pages/card-user/card-user.component.html
@@ -54,7 +54,7 @@
           <div class="flex-fill">
             <a
               class="btn btn-danger border-0 d-flex flex-column w-100"
-              [routerLink]="['/control-panel', 'home']"
+              (click)="delete(usuario?._id)"
             >
               <li class="fa-solid fa-trash-can"></li>
               <small class="fs-18">Borrar</small>
