--- a/actividad/src/app/pages/user-list/user-list.component.css
+++ b/actividad/src/app/pages/user-list/user-list.component.css
@@ -1,4 +1,4 @@
-/* @media(min-width: 400px){
+@media(min-width: 400px){
     .col-pro{
         display: flex;
         height:auto;
@@ -15,5 +15,6 @@
     .col-pro{
         display: flex;
         max-width: 25%;
+        margin-bottom: 1rem;
     }
-} */
+}
