--- a/actividad/src/app/pages/user-list/user-list.component.html
+++ b/actividad/src/app/pages/user-list/user-list.component.html
@@ -1,73 +1,23 @@
 <section class="container">
-  <div class="row m-3">
-    <div
-      class="row row-cols-1 row-cols-sm-3 row-cols-md-5 gap-2 justify-content-around"
-    >
-      @for (user of arruser; track user.id) {
-      <div class="card shadow justify-content-between p-3">
-        <div class="text-center flex-wrap">
-          <div class="d-grip">
-            <img class="img-fluid rounded-circle" [src]="user.image" />
-          </div>
-          <p class="fs-5">{{ user.first_name }} {{ user.last_name }}</p>
-        </div>
-
-        <div class="d-flex flex-wrap gap-1">
-          <div class="flex-fill">
-            <a
-              [routerLink]="['/control-panel', 'users', user._id]"
-              class="btn btn-secondary border-0 d-flex flex-column w-100"
-            >
-              <li class="fa-duotone fa-solid fa-magnifying-glass"></li>
-              <small class="fs-18">Ver detalles</small>
-            </a>
-            <!-- <a
-                  class="btn btn-secondary d-flex flex-column w-100 border-0"
-                  [routerLink]="['user', myuser.id]"
-                  class="btn btn-warning"
-                >
-                  <li class="fa-duotone fa-solid fa-magnifying-glass"></li>
-                  Ver detalles
-                </a> -->
-          </div>
-          <div class="flex-fill">
-            <a
-              class="btn btn-info border-0 d-flex flex-column w-100"
-              [routerLink]="['/control-panel', 'actualizar-usuario', user._id]"
-            >
-              <li class="fa-solid fa-arrows-rotate"></li>
-              <small class="fs-18">Actualizar</small>
-            </a>
-          </div>
-          <div class="flex-fill">
-            <a
-              class="btn btn-danger border-0 d-flex flex-column w-100"
-              [routerLink]="['/control-panel', 'home']"
-              (click)="delete(user._id)"
-            >
-              <li class="fa-solid fa-trash-can"></li>
-              <small class="fs-18">Borrar</small>
-            </a>
-          </div>
-        </div>
-      </div>
-      }
-    </div>
-    <div class="justify-content-center d-flex p-4 m-4" style="height: 50px">
-      <!-- 
+  <div class="row">
+    @for (user of arruser; track user.id) {
+    <article class="col-pro">
+      <app-userview [myuser]="user"></app-userview>
+    </article>
+    }
+  </div>
+  <div class="justify-content-center d-flex p-4 m-4" style="height: 50px">
+    <!-- 
       <button (click)="gotoPage(1)">Previous</button>
       <button (click)="gotoPage(2)">Next</button>
        -->
-      <pagination-template>
-        <button class="btn border-0" [disabled]="currentPage === 1">
-          Previous
-        </button>
-        <button class="btn border-0" (click)="gotoPage(1)">1</button>
-        <button class="btn border-0" (click)="gotoPage(2)">2</button>
-        <button class="btn border-0" [disabled]="currentPage === 2">
-          Next
-        </button>
-      </pagination-template>
-    </div>
+    <pagination-template>
+      <button class="btn border-0" [disabled]="currentPage === 1">
+        Previous
+      </button>
+      <button class="btn border-0" (click)="gotoPage(1)">1</button>
+      <button class="btn border-0" (click)="gotoPage(2)">2</button>
+      <button class="btn border-0" [disabled]="currentPage === 2">Next</button>
+    </pagination-template>
   </div>
 </section>
