se agrego boton de volver desde el formulario

--- a/actividad/src/app/pages/user-list/user-list.component.html
+++ b/actividad/src/app/pages/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container mt-4">
   <div class="row">
     @for (user of arruser; track user.id) {
     <article class="col-pro">
