--- a/actividad/src/app/pages/form/form.component.html
+++ b/actividad/src/app/pages/form/form.component.html
@@ -71,13 +71,24 @@
         <p class="text-danger">El Url es obligatorio</p>
         }
       </div>
-      <div class="my-3">
-        <input type="submit" [value]="variable" class="btn btn-danger" />
-      </div>
-      <!-- <button type="submit" class="btn btn-info border-0 align-items-center">
+      <div class="d-flex flex- gap-1">
+        <div class="my-3">
+          <input type="submit" [value]="variable" class="btn btn-danger" />
+        </div>
+        <div class="my-3">
+          <a
+            [routerLink]="['/control-panel', 'home']"
+            class="btn btn-secondary border-0"
+          >
+            <i class="fa-solid fa-rotate-left"></i>
+            <small class="fs-18">Volver</small>
+          </a>
+        </div>
+        <!-- <button type="submit" class="btn btn-info border-0 align-items-center">
         <i class="fa-duotone fa-solid fa-floppy-disk"></i>
         <small class="fs-18"> {{ variable }}</small>
       </button> -->
+      </div>
     </form>
     @for( error of errorform; track $index ){
     <p class="text-danger">{{ error.field }}: {{ error.message }}</p>
