estilos al boton volver y mejoras en el grip del listado

--- a/actividad/src/app/pages/form/form.component.html
+++ b/actividad/src/app/pages/form/form.component.html
@@ -1,4 +1,4 @@
-<section class="container mt-3">
+<section class="container mt-4">
   <div class="card shadow p-5">
     <h3>{{ variable }} Usuario</h3>
 
@@ -80,7 +80,7 @@
             [routerLink]="['/control-panel', 'home']"
             class="btn btn-secondary border-0"
           >
-            <i class="fa-solid fa-rotate-left"></i>
+            <i class="fa-sharp-duotone fa-solid fa-rotate-left"></i>
             <small class="fs-18">Volver</small>
           </a>
         </div>
