--- a/actividad/src/app/pages/card-user/card-user.component.html
+++ b/actividad/src/app/pages/card-user/card-user.component.html
@@ -1,5 +1,5 @@
-<section class="container d-flex justify-content-center">
-  <div class="card mb-3 p-5" style="width: 80%">
+<section class="container mt-4 d-flex justify-content-center">
+  <div class="card mb-3 p-4" style="width: 100%">
     <div class="row no-gutters">
       <div class="col-md-4 p-4 align-content-center">
         <img
@@ -20,7 +20,7 @@
           <p><strong>Email: </strong>{{ usuario?.email }}</p>
         </div>
 
-        <div class="d-flex flex-wrap gap-1">
+        <div class="d-flex flex- gap-1">
           <div class="flex-fill">
             <a
               [routerLink]="['/control-panel', 'home']"
