--- a/actividad/src/app/pages/user-list/user-list.component.css
+++ b/actividad/src/app/pages/user-list/user-list.component.css
@@ -1,14 +1,13 @@
-@media(min-width: 400px){
+@media(min-width: 280px){
     .col-pro{
         display: flex;
-        height:auto;
+        margin-bottom: 1rem;
         
     }
 }
 @media(min-width: 500px){
     .col-pro{
         display: flex;
-        column-gap: 2px;
         max-width: 50%;
         margin-bottom: 1rem;
     }
