--- a/actividad/src/app/pages/form/form.component.html
+++ b/actividad/src/app/pages/form/form.component.html
@@ -1,5 +1,5 @@
 <section class="container mt-4">
-  <div class="card shadow p-5">
+  <div class="card p-5 efecto">
     <h3>{{ variable }} Usuario</h3>
 
     <form [formGroup]="usuarioform" (ngSubmit)="getDataForm()">
