--- a/actividad/src/app/components/navbar/navbar.component.html
+++ b/actividad/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-lg bg-dark navbar-dark p-3 border-4 border-bottom border-danger shadow mb-2"
+  class="navbar navbar-expand-lg bg-dark navbar-dark p-3 border-4 border-bottom border-danger shadow"
 >
   <div class="container">
     <div class="img-fluid ms-2">
