--- a/actividad/src/app/pages/card-user/card-user.component.html
+++ b/actividad/src/app/pages/card-user/card-user.component.html
@@ -1,10 +1,10 @@
 <section class="container mt-4 d-flex justify-content-center">
-  <div class="card mb-3 p-4" style="width: 100%">
+  <div class="card mb-3 p-4 border-1 efecto">
     <div class="row no-gutters">
-      <div class="col-md-4 p-4 align-content-center">
+      <div class="col-md-4 p-4 d-flex justify-content-center">
         <img
           [src]="usuario?.image"
-          class="card-img img-fluid rounded-circle"
+          class="card-img img-fluid rounded-circle img"
           alt="..."
         />
       </div>
@@ -27,7 +27,7 @@
               class="btn btn-secondary border-0 d-flex flex-column w-100"
             >
               <i class="fa-solid fa-rotate-left"></i>
-              <small class="fs-18">Volver a listado</small>
+              <small class="fs-18">Volver</small>
             </a>
           </div>
           <div class="flex-fill">
