se agrego funcionalidad a los botones next y prv de volver a inicio y fin, tambien a las paginas

--- a/actividad/src/app/pages/form/form.component.html
+++ b/actividad/src/app/pages/form/form.component.html
@@ -1,4 +1,4 @@
-<section class="container mt-4">
+<section class="container mt-4 mb-4">
   <div class="card p-5 efecto">
     <h3>{{ variable }} Usuario</h3>
 
