--- a/actividad/src/app/pages/control-panel/control-panel.component.html
+++ b/actividad/src/app/pages/control-panel/control-panel.component.html
@@ -1,10 +1,12 @@
-<header>
-  <app-navbar></app-navbar>
-</header>
+<div class="d-flex flex-column vh-100">
+  <header class="flex-grow-0">
+    <app-navbar></app-navbar>
+  </header>
 
-<main>
-  <router-outlet></router-outlet>
-</main>
-<footer>
-  <p>Copyright &copy; 2024</p>
-</footer>
+  <main class="flex-grow-1">
+    <router-outlet></router-outlet>
+  </main>
+  <footer class="flex-grow-0">
+    <app-footer></app-footer>
+  </footer>
+</div>
