--- a/actividad/src/app/pages/user-list/user-list.component.html
+++ b/actividad/src/app/pages/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<section class="container mt-4">
+<section class="d-flex flex-column container mt-4">
   <div class="row">
     @for (user of arruser; track user.id) {
 
@@ -7,7 +7,7 @@
     </article>
     }
   </div>
-  <div class="justify-content-center d-flex p-4" style="height: 50px">
+  <div class="justify-content-center d-flex p-2 m-2" style="height: 50px">
     <pagination-template>
       <button class="btn btn-light me-2" (click)="previPage()">
         << Previous
